update styles. fix crash for too large image.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,8 +54,8 @@ nav {
 .showRecipes {
   border: 4px solid #91c54c;
   border-radius: 10px;
-  height: 200px;
-  width: 400px;
+  height: 300px;
+  width: 208px;
   color: #039be5;
 }
 
